# audio-blindmark

./: .gitignore  .isort.cfg  .pylintrc  MANIFEST.in  README.md  build_dev.py  clean.py  pyproject.toml  pytest_cython.py  setup.py  test.py  test_benchmark.py
.githooks/: pre-commit
src/audio_blindmark/: __init__.py  base.py  coder.py  embed.py  extract.py  wave_helper.py
src/audio_blindmark/utils/: bytearray_xor.pxd  bytearray_xor.pyi  bytearray_xor.pyx  random.py  random_tools.pxd  random_tools.pyi  random_tools.pyx
src/creedsolo/: __init__.pxd  __init__.py  creedsolo.pxd  creedsolo.pyi  creedsolo.pyx  reedsolo.py
tests/audio_blindmark/: fake_steganographier.py  test_framework.py
tests/creedsolo/: test_creedsolo.py  test_reedsolo.py
